[package]
name = "mcp23017"
version = "1.2.0"
description = "A rust driver for the MCP23017 (16-Bit I2C I/O Expander with Serial Interface)"
authors = ["Luca Zulian <lucagiuggia@gmail.com>", "Greg Green <ggreen@bit-builder.com"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["hal", "IO"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gpgreen/mcp23017"
edition = "2018"
exclude = [
    "docs/",
    "docs/*",
]
rust-version = "1.61"

[dependencies]
embedded-hal = "1.0"
thiserror = { version = "2.0", default-features = false }